# pyduckling

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  build-vars.sh  build.rs  build.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml
containers/duckling-ffi/: Dockerfile  build.sh
duckling-ffi/: duckling-ffi.cabal  stack.yaml
ext_lib/: ghc_shim.c
src/: lib.rs
