name:                duckling-ffi
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/treble-ai/duckling-ffi
license:             MIT
license-file:        LICENSE
author:              Edgar Andrés Margffoy Tuay
maintainer:          edgar@treble.ai
copyright:           2020 Edgar Andrés Margffoy Tuay
category:            Systems
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag versioned-rts
  description: Use versioned RTS library name (HSrts-1.0.2). Required for GHC 9.2+ installations using the Hadrian build system.
  default: True

library
  hs-source-dirs:      DucklingFFI
  exposed-modules:     FFI
  build-depends:       base
                     , duckling
                     , aeson
                     , text
                     , bytestring
                     , string-conversions
                     , extra
                     , unordered-containers
                     , directory
                     , time
                     , timezone-olson
                     , timezone-series
                     , filepath
  default-language:    Haskell2010
  if flag(versioned-rts)
    extra-libraries:   HSrts-1.0.2
  else
    extra-libraries:   HSrts
  ghc-options: -no-hs-main -staticlib -fPIC -o libducklingffi.a
  other-extensions: ForeignFunctionInterface

source-repository head
  type:     git
  location: https://github.com/treble-ai/duckling-ffi
